--- a/packages/web/.env
+++ b/packages/web/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_GRAPHQL_ENDPOINT=
-NEXT_PUBLIC_GRAPHQL_APIKEY=
-NEXT_PUBLIC_USER_FORM_SLUG=
+NEXT_PUBLIC_GRAPHQL_ENDPOINT=https://d4rigf5grzbyxp6eym7cyee5yy.appsync-api.us-east-1.amazonaws.com/graphql
+NEXT_PUBLIC_GRAPHQL_APIKEY=da2-sra25d7pgnevpghij5is44bhxq
+NEXT_PUBLIC_USER_FORM_SLUG=users
 NEXT_PUBLIC_SHOPIFY_PRODUCT_FAVORITE_TEMPLATE=
 NEXT_PUBLIC_APP_DOMAIN=
